# Openterface_Android

./: .gitignore  .gitmodules  AOS_Input模块问题分析与改进计划.md  KVMGO_CH340_DEBUG_GUIDE.md  PLAN_UI_REFACTOR.md  QUICK_START.md  README.md  SERIAL_DEBUG_GUIDE.md  VERSION_MANAGEMENT.md  VERSION_UPDATE_GUIDE.md  build.gradle  debug-device.ps1  debug_baudrate.md  debug_commands.md  debug_kvmgo_ch340.ps1  debug_serial.ps1  debug_workflow.ps1  emulator_setup.md  gradle.properties  install.sh  local.properties.template  settings.gradle  setup-github-secrets.ps1  setup-local-gradle.ps1  test-keystore-credentials.ps1  test_baudrate.ps1  test_orientation.sh  test_orientation_v2.sh  verify-keystore.ps1  竖屏模式缩放平移问题修复计划.md  键盘鼠标Pro功能修复计划.md
.github/workflows/: build-package.yaml  bump-version.yaml  create-release.yaml  gradle-publish.yml  lint-check.yml  main.yaml  main.yml  openterface.yml  release-notes-fix.sh
app/: build.gradle  keystore.jks  lint-baseline.xml  proguard-rules.pro
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/openterface_jni/: keymod_jni.c
docs/: OPENTERFACE_DEVICE_MANAGEMENT.md  VNC_SERVER_IMPLEMENTATION.md  WEBRTC_SERVER.md
docs/mouse/: README.md  viewport-center-following.md  zoom-and-cursor-architecture.md
docs/tutorial/: 01_orientation.md  02_installing.md  03_connecting_hardware.md  04_main_screen.md  05_mouse_control.md  06_keyboard.md  07_camera.md  08_settings_panel.md  09_persistence.md  10_troubleshooting.md  11_updates_versions.md  12_everyday_tasks.md  13_advanced.md  14_help_contributing.md  15_vnc_server.md  (+1 more)
libuvccamera/: build.gradle  consumer-rules.pro  lint-baseline.xml  proguard-rules.pro
libvncserver/: build.gradle  proguard-rules.pro
openterface-web/: README.md
reports/: app-lint-report.html  index.html  libuvccamera-lint-report.html
scripts/: realign_elf.py
(+378 files in other folders)
